# 3DGS

./: README.md  pyproject.toml  requirements.txt
data/scene_big/: cameras.json
data/scene_big96/: cameras.json
data/scene_real/: cameras.json  points.npz
data/scene_synth/: cameras.json
learn/: lesson1_2d_splatting.py
outputs/recon/: model.pt  point_cloud.ply
outputs/recon_big/: metrics.json  model.pt
outputs/recon_big2/: metrics.json
outputs/recon_real/: castle.ply  model.pt
outputs/recon_real2/: castle.ply  metrics.json  model.pt  point_cloud.ply
outputs/recon_verify/: metrics.json  model.pt  point_cloud.ply
scripts/: _bootstrap.py  make_scene.py  make_textured_capture.py  reconstruct.py  reconstruct_from_images.py
src/splat_inspect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/splatinspect/: __init__.py  cameras.py  cli.py  eval.py  gaussians3d.py  io_ply.py  scene.py  viewer.py  viz.py
tests/: test_engine.py
